# psopt-CMake

./: .gitignore  CMakeLists.txt  README  README.md  install-debian-9  install-debian-9.sh
PSOPT/: CMakeLists.txt
PSOPT/examples/: CMakeLists.txt
PSOPT/examples/alpine/: CMakeLists.txt
PSOPT/examples/bioreactor/: CMakeLists.txt
PSOPT/examples/brac1/: CMakeLists.txt
PSOPT/examples/breakwell/: CMakeLists.txt
PSOPT/examples/bryden/: CMakeLists.txt
PSOPT/examples/brymr/: CMakeLists.txt
PSOPT/examples/catmix/: CMakeLists.txt
PSOPT/examples/chain/: CMakeLists.txt
PSOPT/examples/climb/: CMakeLists.txt
PSOPT/examples/steps/: CMakeLists.txt  steps.cxx
PSOPT/src/: NLP_constraints.cxx  NLP_objective.cxx  evaluate.cxx  ipopt_psopt.h  parameter_estimation.cxx  phases.cxx  plot.cxx  print.cxx  psopt.cxx  psopt.h  trajectories.cxx  validate.cxx
cmake/: FindADOLC.cmake  FindCXSparse.cmake
dmatrix/: CMakeLists.txt
dmatrix/include/: dmatrixv.h
lusol/: CMakeLists.txt
lusol/csrc/: lusolio.c  mmio.c
